Fix project image spacing

--- a/css/projects.css
+++ b/css/projects.css
@@ -30,6 +30,7 @@
 /* Images */
 
 .project section.intro {
+	margin-bottom: 50px;
 	background: rgb(26, 26, 26);
 }
 
@@ -42,6 +43,7 @@
 
 .project section.intro .topImage {
 	height: 500px;
+	margin-bottom: 0;
 }
 
 
